RESOLVED FIXED277387
During the rewrite animation, lines of text clip together and look bad.
https://bugs.webkit.org/show_bug.cgi?id=277387
Summary During the rewrite animation, lines of text clip together and look bad.
Megan Gardner
Reported 2024-07-30 16:37:18 PDT
During the rewrite animation, lines of text clip together and look bad.
Attachments
Megan Gardner
Comment 1 2024-07-30 16:37:29 PDT
Megan Gardner
Comment 2 2024-07-30 16:50:16 PDT
EWS
Comment 3 2024-07-31 07:49:40 PDT
Committed 281649@main (7ed26de67beb): <https://commits.webkit.org/281649@main> Reviewed commits have been landed. Closing PR #31510 and removing active labels.
EWS
Comment 4 2024-08-09 10:36:17 PDT
Committed 280938.214@safari-7619-branch (e3699f4a5011): <https://commits.webkit.org/280938.214@safari-7619-branch> Reviewed commits have been landed. Closing PR #1578 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.