During the rewrite animation, lines of text clip together and look bad. https://bugs.webkit.org/show_bug.cgi?id=277387 rdar://131091868

Reviewed by Wenson Hsieh.

We need to not set the flag that uses the selection rects for determining
the text lines since it coalesces the lines of the same width together, and
gives us different information that what we want to run this animation.

* Source/WebKit/WebProcess/WebPage/Cocoa/TextAnimationController.mm:
(WebKit::TextAnimationController::addInitialTextAnimation):
(WebKit::TextAnimationController::createTextIndicatorForRange):

Canonical link: https://commits.webkit.org/281649@main